Grid image was not covering and images got streched out, fixed using fill and set a image parent element to set width and height

--- a/src/styles/components/Grid.module.scss
+++ b/src/styles/components/Grid.module.scss
@@ -47,6 +47,17 @@
     }
 
     
+.image {
+    position: relative;
+    display: block;
+    border-radius: 0;
+        min-width: inherit;
+        min-height: inherit;
+        max-width: 100%;
+        padding: 2rem;
+}
+
+    
 .grid_item img{
     pointer-events: none;
     border-radius: 10px;
@@ -89,3 +100,4 @@
         font-size: $font-size-s;
     }
 }
+
